2023-11-21

- add Docker build scripts

  1.1.1

- small tweaks to dockerfiles

  1.1.13

- Small tweaks to query params setup

  1.1.14

- Added support for a /statistieken pagina
- Copy changes

  1.1.15

- Added support for sorting inside the table
- Copy changes

  1.2.0

- Added support for direct navigation to publication
- Extra icon for navigating to publication page

  1.2.1

- Added script to generate overview of all organizations and their titles
- Bumped minimal Node version to 18

  1.2.2

- added the following keys

* Date for the start of a public review
* Date for the end of a public review
* Date for the end of a publication (new version of the publication, deprecated,...)

  1.2.3

* Reordered the table view of the standards

  1.3.0

* Translation of the application to English

  1.3.1

* Reverted back to default language and removed unneeded console logs

  1.3.2

* Rename NPM_AUTH_TOKEN to NPM_TOKEN
* Disabled detectBrowserLanguage from i18n