@@ -174,9 +174,18 @@ import type { Description } from '~/types/description'
 import type { DescriptionData } from '~/types/descriptionData'
 import type { NavigationLink } from '~/types/navigationLink'
 import { getUsageTranslation, Usage, type Standard } from '~/types/standard'
-const { t } = useI18n()
+import { validateLocaleCookie } from '~/utils/i18n'
+
+const { defaultLocale, availableLocales, t, setLocale } = useI18n()
+const cookie = useCookie('i18n_redirected').value ?? defaultLocale
 
 const { params } = useRoute()
+
+await setLocale(
+  cookie
+    ? validateLocaleCookie(cookie, defaultLocale, availableLocales)
+    : defaultLocale,
+)
 
 // Multiple queryContents require to await them all at the same time: https://github.com/nuxt/content/issues/1368
 const { data } = await useAsyncData('data', async () => {
@@ -232,4 +241,8 @@ if (!data?.value?.standard) {
     statusMessage: 'Page not found',
   })
 }
+
+definePageMeta({
+  middleware: ['i18n'],
+})
 </script>
